--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "test": ""
   },
   "dependencies": {
+    "final-form": "^4.10.0",
     "parcel-bundler": "^1.10.3",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-final-form": "^3.6.7"
   },
   "devDependencies": {
     "@reach/router": "^1.2.1",
