--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "test": ""
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "express": "^4.16.4",
     "final-form": "^4.10.0",
     "parcel-bundler": "^1.10.3",
     "react": "^16.6.3",
@@ -12,7 +14,6 @@
     "react-final-form": "^3.6.7"
   },
   "devDependencies": {
-    "@reach/router": "^1.2.1",
     "@types/": "reach/router",
     "@types/reach__router": "^1.2.2",
     "@types/react": "^16.7.3",
