moved typing file structure around

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es5",
     "outDir": "./dist",
     "lib": ["es2015", "dom"],
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./src"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
