--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "parcel-bundler": "^1.10.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-final-form": "^3.6.7"
+    "react-final-form": "^3.6.7",
+    "validate.js": "^0.12.0"
   },
   "devDependencies": {
     "@types/": "reach/router",
