--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "final-form": "^4.10.0",
     "parcel-bundler": "^1.10.3",
+    "postcss-modules": "^1.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-final-form": "^3.6.7",
