--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-final-form": "^3.6.7",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "services": "^0.0.3",
     "validate.js": "^0.12.0"
   },
   "devDependencies": {
@@ -20,6 +23,7 @@
     "@types/reach__router": "^1.2.2",
     "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.9",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
