--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "clean": "rm -rf ./dist",
-    "build": "./node_modules/.bin/parcel build src/index.html",
+    "clean": "rm -rf ./dist ./.cache",
+    "build:prod": "./node_modules/.bin/parcel build src/index.html",
+    "build:staging": "NODE_ENV=staging ./node_modules/.bin/parcel build src/index.html",
     "dev": "./node_modules/.bin/parcel src/index.html",
     "prod": "npm run clean && npm run build",
     "test": ""
@@ -18,12 +19,12 @@
     "validate.js": "^0.12.0"
   },
   "devDependencies": {
-    "@types/": "reach/router",
     "@types/reach__router": "^1.2.2",
     "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.9",
     "@types/react-redux": "^6.0.9",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "parcel-bundler": "^1.10.3",
