--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "clean": "rm -rf ./dist ./.cache",
-    "build": "npm run clean && ./node_modules/.bin/parcel build src/index.html",
+    "build": "npm run clean && ./node_modules/.bin/parcel build src/index.html && tsc src/server.ts --outDir dist",
     "dev": "./node_modules/.bin/parcel src/index.html",
     "start": "node dist/server.js",
     "test": "jest",
