--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "clean": "rm -rf ./dist ./.cache",
     "build": "./node_modules/.bin/parcel build ./src/index.html && tsc ./src/server.ts --outDir ./dist",
     "dev": "./node_modules/.bin/parcel src/index.html",
+    "postinstall": "npm run build",
     "start": "node ./dist/server.js",
     "test": "jest",
     "tdd": "jest --watchAll"
