--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reach/router": "1.2.1",
+    "base.css": "1.0.0",
     "final-form": "4.10.0",
     "react": "16.6.3",
     "react-dom": "16.6.3",
@@ -32,6 +33,7 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "jest": "23.6.0",
+    "normalize.css": "8.0.1",
     "parcel-bundler": "1.10.3",
     "postcss-modules": "1.4.1",
     "react-testing-library": "5.3.0",
