--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@material-ui/core": "3.6.1",
+    "@material-ui/icons": "3.0.1",
     "@reach/router": "1.2.1",
     "final-form": "4.10.0",
+    "final-form-material-ui": "0.3.0",
     "normalize.css": "8.0.1",
     "react": "16.6.3",
     "react-dom": "16.6.3",
