--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "clean": "rm -rf ./dist ./.cache",
-    "build": "./node_modules/.bin/parcel build ./src/index.html && tsc ./src/server.ts --outDir ./dist",
+    "build": "npm run clean && ./node_modules/.bin/parcel build ./src/index.html && tsc ./src/server.ts --outDir ./dist",
     "dev": "./node_modules/.bin/parcel src/index.html",
     "postinstall": "npm run build",
     "start": "node ./dist/server.js",
