--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "private": true,
   "scripts": {
     "clean": "rm -rf ./dist ./.cache",
-    "build": "npm run clean && ./node_modules/.bin/parcel build ./src/index.html && tsc ./src/server.ts --outDir ./dist",
+    "build": "npm run clean && ./node_modules/.bin/webpack",
     "dev": "./node_modules/.bin/parcel src/index.html",
     "postinstall": "npm run build",
     "start": "node ./dist/server.js",
@@ -35,11 +36,18 @@
     "babel-plugin-transform-inline-environment-variables": "0.4.3",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
+    "html-webpack-plugin": "3.2.0",
     "jest": "23.6.0",
     "parcel-bundler": "1.10.3",
     "react-testing-library": "5.3.0",
+    "source-map-loader": "0.2.4",
     "ts-jest": "23.10.5",
-    "typescript": "3.1.6"
+    "ts-loader": "5.3.1",
+    "typescript": "3.1.6",
+    "webpack": "4.27.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.3"
   },
   "jest": {
     "clearMocks": true,
