--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "clean": "rm -rf ./dist ./.cache",
+    "clean": "rm -rf ./dist",
     "build": "npm run clean && ./node_modules/.bin/webpack",
     "dev": "./node_modules/.bin/parcel src/index.html",
     "postinstall": "npm run build",
@@ -16,6 +16,7 @@
     "@material-ui/core": "3.6.1",
     "@material-ui/icons": "3.0.1",
     "@reach/router": "1.2.1",
+    "express": "4.16.4",
     "final-form": "4.10.0",
     "final-form-material-ui": "0.3.0",
     "normalize.css": "8.0.1",
