--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "npm run clean && ./node_modules/.bin/webpack",
+    "build": "npm run clean && ./node_modules/.bin/webpack && cp src/server.js dist/server.js",
     "dev": "./node_modules/.bin/parcel src/index.html",
     "postinstall": "npm run build",
-    "start": "node ./dist/server.js",
+    "start": "./node_modules/.bin/nodemon ./dist/server.js",
     "test": "jest",
     "tdd": "jest --watchAll"
   },
@@ -19,6 +19,7 @@
     "express": "4.16.4",
     "final-form": "4.10.0",
     "final-form-material-ui": "0.3.0",
+    "nodemon": "1.18.9",
     "normalize.css": "8.0.1",
     "react": "16.6.3",
     "react-dom": "16.6.3",
@@ -28,15 +29,23 @@
     "validate.js": "0.12.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/polyfill": "7.2.3",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.1.0",
     "@types/jest": "23.3.9",
     "@types/reach__router": "1.2.2",
     "@types/react": "16.7.3",
     "@types/react-dom": "16.0.9",
     "@types/react-redux": "6.0.9",
     "babel-core": "6.26.3",
+    "babel-loader": "8.0.4",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-inline-environment-variables": "0.4.3",
     "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "dotenv": "6.2.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "23.6.0",
     "parcel-bundler": "1.10.3",
