--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "private": true,
   "scripts": {
-    "clean": "rm -rf ./dist ./.cache",
-    "build": "npm run clean && ./node_modules/.bin/parcel build ./src/index.html && tsc ./src/server.ts --outDir ./dist",
+    "clean": "rm -rf ./dist",
+    "build": "npm run clean && ./node_modules/.bin/webpack && cp src/server.js dist/server.js",
     "dev": "./node_modules/.bin/parcel src/index.html",
     "postinstall": "npm run build",
     "start": "node ./dist/server.js",
@@ -15,6 +16,7 @@
     "@material-ui/core": "3.6.1",
     "@material-ui/icons": "3.0.1",
     "@reach/router": "1.2.1",
+    "express": "4.16.4",
     "final-form": "4.10.0",
     "final-form-material-ui": "0.3.0",
     "normalize.css": "8.0.1",
@@ -26,20 +28,35 @@
     "validate.js": "0.12.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/polyfill": "7.2.3",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.1.0",
     "@types/jest": "23.3.9",
     "@types/reach__router": "1.2.2",
     "@types/react": "16.7.3",
     "@types/react-dom": "16.0.9",
     "@types/react-redux": "6.0.9",
     "babel-core": "6.26.3",
+    "babel-loader": "8.0.4",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-inline-environment-variables": "0.4.3",
     "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "dotenv": "6.2.0",
+    "html-webpack-plugin": "3.2.0",
     "jest": "23.6.0",
     "parcel-bundler": "1.10.3",
     "react-testing-library": "5.3.0",
+    "source-map-loader": "0.2.4",
     "ts-jest": "23.10.5",
-    "typescript": "3.1.6"
+    "ts-loader": "5.3.1",
+    "typescript": "3.1.6",
+    "webpack": "4.27.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.3"
   },
   "jest": {
     "clearMocks": true,
