--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "npm run clean && ./node_modules/.bin/webpack && cp src/server.js dist/server.js",
-    "dev": "./node_modules/.bin/parcel src/index.html",
+    "dev": "./node_modules/.bin/webpack --watch",
     "postinstall": "npm run build",
     "start": "node ./dist/server.js",
     "test": "jest",
