--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "preset": "ts-jest",
     "testEnvironment": "jsdom",
     "testMatch": [
-      "<rootDir>/src/**/*.spec.tsx"
+      "<rootDir>/src/**/*.spec.(tsx|ts)"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
