--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "3.6.1",
     "@material-ui/icons": "3.0.1",
+    "@material-ui/lab": "3.0.0-alpha.28",
     "@reach/router": "1.2.1",
     "express": "4.16.4",
     "final-form": "4.10.0",
