--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "dotenv": "6.2.0",
+    "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "jest": "23.6.0",
     "parcel-bundler": "1.10.3",
