--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "html-webpack-plugin": "3.2.0",
     "jest": "23.6.0",
     "parcel-bundler": "1.10.3",
+    "react-hot-loader": "4.6.3",
     "react-testing-library": "5.3.0",
     "source-map-loader": "0.2.4",
     "ts-jest": "23.10.5",
